# SBO3L-ethglobal-openagents-2026

./: .dockerignore  .gitignore  .vercelignore  AI_USAGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEEDBACK.md  FINAL_REVIEW.md  FINAL_REVIEW_B5.md  IMPLEMENTATION_STATUS.md  LICENSE  PR_DESCRIPTION.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_NOTES.md  SUBMISSION_FORM_DRAFT.md  SUBMISSION_NOTES.md  docker-compose-cluster.yml  docker-compose.yml  requirements.txt  vercel.json
benchmarks/competitive/: Cargo.toml  README.md
benchmarks/competitive/benches/: audit_chain_append.rs  capsule_verify.rs  competitor_comparison.rs  policy_eval.rs  request_hash.rs
crates/mandate-cli/: Cargo.toml
crates/mandate-cli/src/: audit_checkpoint.rs  doctor.rs  key.rs  main.rs  passport.rs  policy.rs
crates/mandate-cli/tests/: audit_bundle.rs  audit_checkpoint_cli.rs  doctor_missing_db.rs  key_cli.rs  passport_cli.rs  policy_cli.rs
crates/mandate-core/: Cargo.toml
crates/mandate-core/src/: audit.rs  audit_bundle.rs  decision_token.rs  execution.rs  lib.rs  mock_kms.rs  passport.rs  receipt.rs  schema.rs  signer.rs
crates/mandate-execution/: Cargo.toml
crates/mandate-execution/src/: keeperhub.rs  lib.rs  uniswap.rs
crates/mandate-identity/: Cargo.toml
crates/mandate-identity/src/: ens.rs  lib.rs
crates/mandate-keeperhub-adapter/: CHANGELOG.md  Cargo.toml  README.md
crates/mandate-keeperhub-adapter/examples/: submit_signed_receipt.rs
crates/mandate-keeperhub-adapter/src/: lib.rs
crates/mandate-mcp/: Cargo.toml
crates/mandate-mcp/src/: jsonrpc.rs  lib.rs  main.rs
crates/mandate-mcp/tests/: jsonrpc_integration.rs
crates/mandate-policy/: Cargo.toml
crates/mandate-policy/src/: budget.rs  engine.rs  expr.rs  lib.rs  model.rs  util.rs
crates/mandate-server/: Cargo.toml
crates/mandate-server/src/: lib.rs  main.rs
crates/mandate-storage/: Cargo.toml
crates/mandate-storage/src/: audit_checkpoint_store.rs  audit_store.rs  db.rs  error.rs  idempotency_store.rs  lib.rs  mock_kms_store.rs  nonce_store.rs  policy_store.rs
crates/sbo3l-anchor/: Cargo.toml
crates/sbo3l-anchor/src/: digest.rs  lib.rs  registry.rs
crates/sbo3l-cli/: Cargo.toml
crates/sbo3l-cli/src/: admin_backup.rs  agent.rs  agent_broadcast.rs  agent_reputation.rs  agent_reputation_aggregate.rs  agent_reputation_broadcast.rs  agent_reputation_multichain.rs  agent_verify.rs  audit_anchor.rs  audit_anchor_ens.rs  audit_checkpoint.rs  audit_verify_anchor.rs  doctor.rs  doctor_extended.rs  key.rs  main.rs  passport.rs  policy.rs  uniswap_swap.rs
crates/sbo3l-cli/tests/: admin_backup.rs  agent_register_live.rs  agent_verify_live.rs  audit_bundle.rs  audit_checkpoint_cli.rs  doctor_missing_db.rs  key_cli.rs  passport_cli.rs  policy_cli.rs  uniswap_swap_cli.rs
crates/sbo3l-core/: Cargo.toml
crates/sbo3l-core/schemas/: audit_event_v1.json  sbo3l.passport_capsule.v1.json  sbo3l.passport_capsule.v2.json  x402_v1.json
crates/sbo3l-core/src/: aprp.rs  audit.rs  audit_bundle.rs  error.rs  execution.rs  hashing.rs  lib.rs  mock_kms.rs  passport.rs  receipt.rs  schema.rs  signer.rs  threshold_sig.rs  wasm.rs  wasm_types.rs  webhook.rs  zk_capsule.rs
crates/sbo3l-core/tests/: adversarial_capsule_fixtures.rs  aws_kms_live.rs  eth_signer_integration.rs  gcp_kms_live.rs  proptest_invariants.rs  sdk_conformance.rs
crates/sbo3l-execution/: Cargo.toml
crates/sbo3l-execution/examples/: uniswap_live_smoke.rs
crates/sbo3l-execution/src/: lib.rs  smart_wallet.rs  uniswap.rs  uniswap_live.rs  uniswap_router.rs  uniswap_trading.rs
crates/sbo3l-identity/: Cargo.toml
crates/sbo3l-identity/contracts/: .gitignore  AnchorRegistry.sol  IdentityRegistry.sol  OffchainResolver.sol  SBO3LReputationBond.sol  SBO3LReputationRegistry.sol  SBO3LSubnameAuction.sol  Sbo3lAuditAnchor.sol  foundry.toml
crates/sbo3l-identity/examples/: ens_live_smoke.rs
crates/sbo3l-identity/src/: ccip_read.rs  contracts.rs  cross_agent.rs  cross_chain.rs  durin.rs  ens.rs  ens_anchor.rs  ens_live.rs  erc8004.rs  lib.rs  name_wrapper.rs  policy_cid.rs  reputation_publisher.rs  time_window_gate.rs  token_gate.rs  universal.rs
crates/sbo3l-identity/tests/: ccip_read_sepolia_live.rs  erc8004_live.rs  sepolia_or_live.rs
crates/sbo3l-keeperhub-adapter/: CHANGELOG.md  Cargo.toml  README.md
crates/sbo3l-keeperhub-adapter/examples/: before_after_envelope.rs  submit_signed_receipt.rs
crates/sbo3l-keeperhub-adapter/src/: lib.rs
crates/sbo3l-mcp/: Cargo.toml
crates/sbo3l-mcp/src/: http_transport.rs  lib.rs  main.rs
crates/sbo3l-mcp/tests/: jsonrpc_integration.rs
crates/sbo3l-playground/: Cargo.toml
crates/sbo3l-playground/src/: lib.rs  passport_offline.rs  wasm.rs
crates/sbo3l-policy/: Cargo.toml
crates/sbo3l-policy/src/: budget.rs  cross_chain_reputation.rs  engine.rs  expr.rs  lib.rs  mev_guard.rs  model.rs  reputation.rs  util.rs
crates/sbo3l-policy/tests/: reputation_fleet.rs
crates/sbo3l-server/: Cargo.toml  build.rs  openapi.yaml
crates/sbo3l-server/examples/: load_test.rs
crates/sbo3l-server/src/: admin_events.rs  auth.rs  executor_callback.rs  feature_flags.rs  grpc.rs  lib.rs  main.rs  metrics.rs  otel.rs  otel_middleware.rs  ws_events.rs
crates/sbo3l-server/tests/: healthz.rs  (+14 more)
crates/sbo3l-storage/: Cargo.toml
demo-agents/research-agent/: Cargo.toml  README.md  run  scenarios.json
examples/autogen-keeperhub-demo/: README.md  agent.py  pyproject.toml
examples/crewai-keeperhub-demo/: README.md  agent.py  pyproject.toml
examples/langchain-py-research-agent/: README.md  pyproject.toml  test_keeperhub_demo.py  test_smoke.py
examples/langgraph-agent/: README.md  main.py  pyproject.toml  test_graph.py
examples/langgraph-research-agent/: README.md  main.py  pyproject.toml  test_graph.py
examples/llamaindex-research-agent/: README.md  pyproject.toml  test_smoke.py
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: aprp_parser.rs  audit_event.rs  canonical_json.rs  capsule_deserialize.rs  policy_yaml.rs
fuzz/oss-fuzz/: Dockerfile  build.sh  project.yaml
(+1309 files in other folders)
