[workspace]
resolver = "2"
members = [
    "crates/sbo3l-core",
    "crates/sbo3l-policy",
    "crates/sbo3l-storage",
    "crates/sbo3l-identity",
    "crates/sbo3l-execution",
    "crates/sbo3l-keeperhub-adapter",
    "crates/sbo3l-mcp",
    "crates/sbo3l-cli",
    "crates/sbo3l-server",
    "demo-agents/research-agent",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Babjak <babjak_daniel@hotmail.com>"]
repository = "https://github.com/B2JK-Industry/SBO3L-ethglobal-openagents-2026"
homepage = "https://github.com/B2JK-Industry/SBO3L-ethglobal-openagents-2026"
documentation = "https://docs.rs/sbo3l-core"
readme = "README.md"
rust-version = "1.80"

[workspace.dependencies]
# serde / json / yaml
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_json_canonicalizer = "0.3"

# error handling
thiserror = "1"
anyhow = "1"

# async / runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"

# JSON Schema
jsonschema = { version = "0.17", default-features = false }

# time / money / id
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
ulid = "1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# storage
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"

# server / client
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

# internal
#
# Workspace-internal deps carry both `path` (used by every workspace
# build) and `version` (used by `cargo publish` — when the manifest is
# stripped for upload, the path goes away and the version constraint
# survives). The IP-4 standalone adapter
# (`crates/sbo3l-keeperhub-adapter`) needs `sbo3l-core` to be
# publishable, which means the version must be declared here.
sbo3l-core = { path = "crates/sbo3l-core", version = "1.0.0" }
sbo3l-policy = { path = "crates/sbo3l-policy", version = "1.0.0" }
sbo3l-storage = { path = "crates/sbo3l-storage", version = "1.0.0" }
sbo3l-identity = { path = "crates/sbo3l-identity", version = "1.0.0" }
sbo3l-execution = { path = "crates/sbo3l-execution", version = "1.0.0" }
sbo3l-keeperhub-adapter = { path = "crates/sbo3l-keeperhub-adapter", version = "1.0.0" }
sbo3l-mcp = { path = "crates/sbo3l-mcp", version = "1.0.0" }
sbo3l-cli = { path = "crates/sbo3l-cli", version = "1.0.0" }
sbo3l-server = { path = "crates/sbo3l-server", version = "1.0.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
