[package]
name = "sbo3l-competitive-benchmarks"
version = "0.0.0"
publish = false
edition = "2021"

# Criterion-based comparison harness for SBO3L vs in-process baselines
# and competitor stubs. Not part of the production workspace — kept as
# a separate package so judges can run `cargo bench --bench <name>`
# without pulling production-build dependencies.

[dependencies]
sbo3l-core = { path = "../../crates/sbo3l-core" }
sbo3l-policy = { path = "../../crates/sbo3l-policy" }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "policy_eval"
harness = false

[[bench]]
name = "audit_chain_append"
harness = false

[[bench]]
name = "capsule_verify"
harness = false

[[bench]]
name = "request_hash"
harness = false

[workspace]
# Standalone workspace — same reasoning as fuzz/.
