[package]
name = "mandate-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mandate execution: sponsor execution adapters (KeeperHub, Uniswap)."

[dependencies]
mandate-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
