[package]
name = "mandate-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mandate daemon: HTTP API for payment-request decisions."

[lib]
name = "mandate_server"
path = "src/lib.rs"

[[bin]]
name = "mandate-server"
path = "src/main.rs"

[dependencies]
mandate-core = { workspace = true }
mandate-policy = { workspace = true }
mandate-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
