[package]
name = "mandate-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mandate storage: SQLite persistence and audit hash chain."

[dependencies]
mandate-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
