[package]
name = "sbo3l-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "SBO3L CLI binary: validate, decide, sign, audit, passport run/verify/explain, doctor."
keywords = ["sbo3l", "cli", "agent", "policy", "audit"]
categories = ["command-line-utilities"]

[[bin]]
name = "sbo3l"
path = "src/main.rs"

[dependencies]
sbo3l-core = { workspace = true }
sbo3l-policy = { workspace = true }
sbo3l-storage = { workspace = true }
# Passport P2.1: `sbo3l passport run` orchestrates the existing
# `POST /v1/payment-requests` pipeline in-process (research-agent
# pattern). Pulling sbo3l-server / -identity / -execution + the
# axum/tower/http stack here matches what research-agent's Cargo.toml
# already does — no new transitives in the workspace.
sbo3l-server = { workspace = true }
sbo3l-identity = { workspace = true }
sbo3l-execution = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
ulid = { workspace = true }
# Used by `sbo3l passport run` for atomic capsule writes
# (tempfile in same dir + rename). Promoted from dev-dep to dep.
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# T-3-1 broadcast: optional alloy stack for `sbo3l agent register --broadcast`.
# Feature-gated so default `cargo build -p sbo3l-cli` stays fast — alloy
# pulls ~150 transitive crates. Operators wanting broadcast build with
# `--features eth_broadcast`. The dry-run path is unaffected.
alloy = { version = "0.6", default-features = false, features = [
    "consensus",
    "network",
    "providers",
    "provider-http",
    "rpc-types-eth",
    "signer-local",
    "signers",
    "transport-http",
    "reqwest-rustls-tls",
], optional = true }

[features]
default = []
# Enables `sbo3l agent register --broadcast` to actually sign + send
# the setSubnodeRecord + multicall(setText) txs over JSON-RPC. Without
# this feature the broadcast flag still parses but errors out with a
# clear "rebuild with --features eth_broadcast" message — matches the
# pre-1.0.1 dry-run-only behaviour exactly.
eth_broadcast = ["dep:alloy"]

[dev-dependencies]
rusqlite = { workspace = true }
