[package]
name = "sbo3l-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "SBO3L core: protocol types, request hashing, error model, signed receipts."
keywords = ["sbo3l", "ed25519", "audit", "policy", "agent"]
categories = ["cryptography", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
ulid = { workspace = true }
jsonschema = { workspace = true }

# F-5 EthSigner backends. Pulled only when `eth_signer` feature is
# enabled; default sbo3l-core builds don't include them.
# - `k256`: RustCrypto pure-Rust secp256k1 (signing + recovery id).
# - `tiny-keccak`: keccak256 for EIP-55 address derivation.
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
tiny-keccak = { version = "2", features = ["keccak"], optional = true }

# F-5: KMS backends are feature-gated. Each feature compiles a stub
# module today; the actual SDK dependency is pulled in by a follow-up
# nightly task once Daniel provisions a test key. Until then, daemon
# builds with `--features aws_kms` (etc.) compile cleanly without
# multi-MB SDK dependency trees, and the factory routes to a backend
# whose `sign_hex` returns "not yet implemented".
[features]
default = []
aws_kms = []
gcp_kms = []
phala_tee = []
# eth_signer pulls k256 + tiny-keccak. Adds ~80 transitive crates;
# default off so KeeperHub-only consumers don't pay for the EVM
# stack they don't use.
eth_signer = ["dep:k256", "dep:tiny-keccak"]

[dev-dependencies]
# `local_file` signer tests write secrets to per-test temp files +
# verify the loader handles hex/raw inputs identically. Dev-dep
# only — release `sbo3l-core` builds don't pull `tempfile`.
tempfile = { workspace = true }
